--- a/pom.xml
+++ b/pom.xml
@@ -147,7 +147,7 @@
                         <failOnViolation>true</failOnViolation>
                         <logViolationsToConsole>true</logViolationsToConsole>
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
-                        <excludes>**/generated/**/*</excludes>
+                        <excludes>**/generated-sources/**/*</excludes>
                     </configuration>
                     <executions>
                         <execution>
