the fourth attempt to check

--- a/pom.xml
+++ b/pom.xml
@@ -147,6 +147,7 @@
                         <failOnViolation>true</failOnViolation>
                         <logViolationsToConsole>true</logViolationsToConsole>
                         <includeTestSourceDirectory>true</includeTestSourceDirectory>
+                        <suppressionsLocation>suppressions.xml</suppressionsLocation>
                         <excludes>**/generated-sources/**/*</excludes>
                     </configuration>
                     <executions>
